--- a/index.html
+++ b/index.html
@@ -40,11 +40,20 @@
         -o-background-size: cover;
         background-size: cover;
          
-    } */
-    /* .carousel-item img{
+    }
+    .carousel-item img{
         height: 100vh;
        object-fit: cover;
 } */
+        /* Make all carousel images same size */
+        #header-carousel .carousel-item img {
+            width: 100%;
+            height: 750px;
+            /* same height for all slides */
+            object-fit: cover;
+            /* prevents stretching */
+        }
+
         .product-item .img-fluid {
             height: 300px;
             object-fit: cover;
@@ -202,7 +211,7 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/mexican.webp" alt="Image">
+                    <img class="w-100" src="img/homebg.webpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-start">
@@ -734,7 +743,8 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <img class="img-fluid" src="img/hygienek.webp" alt="">
                     <div class="bg-light p-4">
-                        <a class="d-block h5 lh-base mb-4" href="blog2.html">How We Maintain Hygiene & Cleanliness on our
+                        <a class="d-block h5 lh-base mb-4" href="blog2.html">How We Maintain Hygiene & Cleanliness on
+                            our
                             Kitchen</a>
                         <div class="text-muted border-top pt-4">
                             <small class="me-3"><i class="fa fa-user text-primary me-2"></i>Admin</small>
@@ -745,7 +755,8 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <img class="img-fluid" src="img/blog-3.webp" alt="">
                     <div class="bg-light p-4">
-                        <a class="d-block h5 lh-base mb-4" href="blog3.html">Fresh Vegetables We Use in Our Home-Made Food</a>
+                        <a class="d-block h5 lh-base mb-4" href="blog3.html">Fresh Vegetables We Use in Our Home-Made
+                            Food</a>
                         <div class="text-muted border-top pt-4">
                             <small class="me-3"><i class="fa fa-user text-primary me-2"></i>Admin</small>
                             <small class="me-3"><i class="fa fa-calendar text-primary me-2"></i>01 Jan, 2025</small>
