--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/homebg.webpg" alt="Image">
+                    <img class="w-100" src="img/homebg.webp" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-start">
