--- a/product.html
+++ b/product.html
@@ -158,7 +158,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="index.html" class="nav-item nav-link fw-bold ">Home</a>
 
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle fw-bold" data-bs-toggle="dropdown">Who We Are?</a>
@@ -166,6 +165,16 @@
                             <a href="about.html" class="dropdown-item">About Us</a>
                             <a href="feature.html" class="dropdown-item">Our Features</a>
                             <a href="testimonial.html" class="dropdown-item">Customer Reviews</a>
+                        </div>
+                    </div>
+                     <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle fw-bold "
+                            data-bs-toggle="dropdown">Pricing</a>
+                        <div class="dropdown-menu m-0">
+                            <a href="breakfast.html" class="dropdown-item">Break Fast Foods</a>
+                            <a href="lunch.html" class="dropdown-item">Lunch box Foods</a>
+                            <a href="dinner.html" class="dropdown-item">Dinner Foods</a>
+                            <a href="fullday.html" class="dropdown-item">Full Day Foods</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
