--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    
+                    <a href="index.html" class="nav-item nav-link fw-bold ">Home</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle fw-bold active" data-bs-toggle="dropdown">Who We
                             Are?</a>
@@ -180,17 +180,7 @@
                     <a href="blog.html" class="nav-item nav-link fw-bold">Blog</a>
                     <a href="contact.html" class="nav-item nav-link fw-bold">Contact Us</a>
                 </div>
-                <div class="d-none d-lg-flex ms-2">
-                    <a class="btn-sm-square bg-white rounded-circle ms-3" href="">
-                        <small class="fa fa-search text-body"></small>
-                    </a>
-                    <a class="btn-sm-square bg-white rounded-circle ms-3" href="">
-                        <small class="fa fa-user text-body"></small>
-                    </a>
-                    <a class="btn-sm-square bg-white rounded-circle ms-3" href="">
-                        <small class="fa fa-shopping-bag text-body"></small>
-                    </a>
-                </div>
+                
             </div>
         </nav>
     </div>
