--- a/blog6.html
+++ b/blog6.html
@@ -75,7 +75,12 @@ background-image: url("img/20613.webp"); /* banner image */
 </head>
 
 <body>
-   
+   <!-- Spinner Start -->
+    <div id="spinner"
+        class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+        <div class="spinner-border text-primary" role="status"></div>
+    </div>
+    <!-- Spinner End -->
 
 
     <!-- Navbar Start -->
@@ -103,7 +108,7 @@ background-image: url("img/20613.webp"); /* banner image */
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
-
+                    <a href="index.html" class="nav-item nav-link fw-bold ">Home</a>
                       <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle fw-bold" data-bs-toggle="dropdown">Who We Are?</a>
                         <div class="dropdown-menu m-0">
@@ -133,17 +138,7 @@ background-image: url("img/20613.webp"); /* banner image */
                     <a href="blog.html" class="nav-item nav-link fw-bold active">Blog</a>
                     <a href="contact.html" class="nav-item nav-link fw-bold">Contact Us</a>
                 </div>
-                <div class="d-none d-lg-flex ms-2">
-                    <a class="btn-sm-square bg-white rounded-circle ms-3" href="">
-                        <small class="fa fa-search text-body"></small>
-                    </a>
-                    <a class="btn-sm-square bg-white rounded-circle ms-3" href="">
-                        <small class="fa fa-user text-body"></small>
-                    </a>
-                    <a class="btn-sm-square bg-white rounded-circle ms-3" href="">
-                        <small class="fa fa-shopping-bag text-body"></small>
-                    </a>
-                </div>
+ 
             </div>
         </nav>
     </div>
