--- a/deliverypolicy.html
+++ b/deliverypolicy.html
@@ -39,7 +39,7 @@
             display: flex;
             align-items: center;
 
-            background-image: url("img/20613.webp");
+            background-image: url("img/terms-bg.webp");
             /* banner image */
             background-size: cover;
             /* 🔥 prevents breaking */
@@ -75,22 +75,22 @@
             /* highlight */
             color: #000;
         }
-
-        .subtitles {
-            border: none;
-            border-bottom: 2px solid red;
-            display: inline-block;
+        .terms-header,.list-header{
+           border:none;
+           border-bottom:2px solid red;
+           display:inline-block
         }
     </style>
 </head>
 
 <body>
-<!-- Spinner Start -->
+    <!-- Spinner Start -->
     <div id="spinner"
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border text-primary" role="status"></div>
     </div>
     <!-- Spinner End -->
+
 
     <!-- Navbar Start -->
     <div class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s">
@@ -127,7 +127,7 @@
                             <a href="testimonial.html" class="dropdown-item">Customer Reviews</a>
                         </div>
                     </div>
-                     <div class="nav-item dropdown">
+                    <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle fw-bold" data-bs-toggle="dropdown">Pricing</a>
                         <div class="dropdown-menu m-0">
                             <a href="breakfast.html" class="dropdown-item">Break Fast Foods</a>
@@ -145,10 +145,10 @@
                         </div>
                     </div>
                     <a href="product.html" class="nav-item nav-link fw-bold ">Products</a>
-                    <a href="blog.html" class="nav-item nav-link fw-bold active">Blog</a>
+                    <a href="blog.html" class="nav-item nav-link fw-bold ">Blog</a>
                     <a href="contact.html" class="nav-item nav-link fw-bold">Contact Us</a>
                 </div>
-              
+
             </div>
         </nav>
     </div>
@@ -157,95 +157,94 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header wow fadeIn" data-wow-delay="0.1s">
         <div class="container">
-            <h1 class="display-3 mb-3 animated slideInDown">Perfect Home-Made Meals for Busy Working Professionals</h1>
+            <h1 class="display-3 mb-3 animated slideInDown">Delivery And Return Policy</h1>
 
         </div>
     </div>
     <!-- Page Header End -->
 
-    <!-- blog image and contents -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-5 align-items-start">
-                <div class="col-lg-6 order-last order-lg-first wow fadeIn " data-wow-delay="0.5">
-                    <h2 class="mb-4 fw-bold ">Importance of Healthy Home-Made Lunch in Daily Life</h2>
-                    <p class="lead ">Fresh vegetables are essential in home-made food as they provide natural nutrients,
-                        freshness, and authentic taste. They are rich in vitamins, minerals, and fiber that support
-                        digestion and boost immunity. Using fresh vegetables helps avoid harmful preservatives and
-                        excess chemicals found in processed foods. They also enhance the color, aroma, and texture of
-                        dishes, making meals more enjoyable. Cooking with fresh, seasonal vegetables ensures better
-                        nutrition, improved health, and balanced daily meals, making home-made food healthier, safer,
-                        and more satisfying for the entire family.
-                    <p>
-
-                </div>
-                <div class="col-lg-6 order-first order-lg-last wow fadeIn " data-wow-delay="0.1s">
-                    <div class="nutrition-img ">
-                        <img class="img-fluid w-100 rounded-3" src="img/blog4.webp">
-                    </div>
-
-                </div>
-            </div>
+    <div class="container-xxl mt-5">
+       
+        <div class="para mt-4">
+            <p class="lead text-secondary fw-bold">This Delivery and Return Policy explains how food orders are delivered and how return-related concerns are handled for our home-made food delivery services. By placing an order, you agree to the terms outlined below.</p>
         </div>
+        <!-- list1 -->
+        <div class="terms-list">
+            <div class="list-header mt-4">
+               <h3>1. Delivery Coverage and Timelines</h3>
+            </div>
+            <ol class="mt-4">
+                <li class="lead mb-3">We deliver freshly prepared home-made food within selected serviceable areas only.</li>
+                <li class="lead mb-3">Estimated delivery times are provided at checkout and may vary due to traffic or operational factors.</li>
+                <li class="lead mb-3">Delivery timelines are calculated from the time the order is confirmed.</li>
+                <li class="lead mb-3">Delays caused by weather, road conditions, or unforeseen circumstances are beyond our control.</li>
+                <li class="lead mb-3">We strive to ensure timely delivery but do not guarantee exact delivery times.</li> 
+            </ol>        
+        </div>
+
+         <!-- list2 -->
+        <div class="terms-list">
+            <div class="list-header mt-4">
+               <h3>2. Delivery Conditions</h3>
+            </div>
+            <ol class="mt-4">
+                <li class="lead mb-3">Customers must provide accurate and complete delivery address details while placing an order.</li>
+                <li class="lead mb-3">Orders may be canceled if the delivery location is unreachable or incorrect.</li>
+                <li class="lead mb-3">The customer or an authorized person must be available to receive the order.</li>
+                <li class="lead mb-3">Re-delivery may not be possible if the customer is unavailable at the delivery location.</li>
+                <li class="lead mb-3">Special delivery instructions must be clearly mentioned during checkout.</li> 
+            </ol>        
+        </div>
+
+         <!-- list3 -->
+        <div class="terms-list ">
+            <div class="list-header mt-4 ">
+               <h3>3. Returns and Replacements</h3>
+            </div>
+            <ol class="mt-4">
+                <li class="lead mb-3">Due to the perishable nature of home-made food, returns are generally not accepted.</li>
+                <li class="lead mb-3">Replacement requests will be considered only in cases of confirmed quality or order issues.</li>
+                <li class="lead mb-3">Requests must be raised immediately upon receiving the order.</li>
+                <li class="lead mb-3">Supporting details such as images may be required to process replacement requests.</li>
+                <li class="lead mb-3">Replacement approval is subject to internal review and verification.</li> 
+            </ol>        
+        </div>
+
+         <!-- list4 -->
+        <div class="terms-list ">
+            <div class="list-header mt-4 ">
+               <h3>4. Refund Eligibility</h3>
+            </div>
+            <ol class="mt-4">
+                <li class="lead mb-3">Refunds are applicable only in cases of non-delivery or approved quality concerns.</li>
+                <li class="lead mb-3">Approved refunds will be processed to the original payment method.</li>
+                <li class="lead mb-3">Refund processing time depends on the payment provider or bank policies.</li>
+                <li class="lead mb-3">No refunds will be issued for delays caused by customer unavailability.</li>
+                <li class="lead mb-3">Refund decisions made by the company are final and binding.</li> 
+            </ol>        
+        </div>
+
+         <!-- list5 -->
+        <div class="terms-list mb-5">
+            <div class="list-header mt-4 ">
+               <h3>5. Delivery Agreement</h3>
+            </div>
+            <ol class="mt-4">
+                <li class="lead mb-3">By placing an order, you agree to the delivery and return terms outlined in this policy.</li>
+                <li class="lead mb-3">Acceptance of delivery implies confirmation of order condition at the time of receipt.</li>
+                <li class="lead mb-3">Users must follow the procedure stated for replacements or refunds..</li>
+                <li class="lead mb-3">This policy applies to all food orders placed through the website.</li>
+                <li class="lead mb-3">The company reserves the right to update this policy at any time.</li> 
+            </ol>        
+        </div>
+
+        <div class="term-footer mt-5">
+            <p class="lead text-secondary fw-bold">By using this website, you agree to our Terms & Conditions, Privacy Policy, Payment Policy, Delivery & Return Policy, and Disclaimer.</p>
+        </div>
+
     </div>
-    <div class="container-xxl py-3">
-        <div class="contentblog mb-5 wow fadeIn" data-wow-delay="0.1s">
-            <div class="subtitles mb-4">
-                <h2>Common Fresh Vegetables We Use Daily</h2>
-            </div>
-            <div class="subpara">
-                <p class="lead">In our daily cooking, we commonly use vegetables like tomatoes, onions, potatoes,
-                    carrots, beans, cabbage, cauliflower, brinjal, and drumstick. These vegetables are versatile and
-                    form the base of many home-style dishes such as curries, gravies, stir-fries, and rice-based meals.
-                    They add flavor, texture, and nutrition to regular meals.</p>
-            </div>
-        </div>
 
-        <div class="contentblog mb-5 wow fadeIn" data-wow-delay="0.1s">
-            <div class="subtitles mb-4">
-                <h2>Benefits of Using Seasonal Vegetables</h2>
-            </div>
-            <div class="subpara">
-                <p class="lead">Seasonal vegetables are always preferred in our home-made food. They are naturally
-                    grown, more nutritious, and fresher compared to off-season produce. Seasonal vegetables also taste
-                    better and are more affordable. Using them supports local farmers and helps maintain a sustainable
-                    and eco-friendly food habit.</p>
-            </div>
-        </div>
-
-        <div class="contentblog mb-5 wow fadeIn" data-wow-delay="0.1s">
-            <div class="subtitles mb-4">
-                <h2>Cleaning and Preparing Vegetables the Right Way</h2>
-            </div>
-            <div class="subpara">
-                <p class="lead">Proper cleaning and preparation of vegetables are essential for healthy cooking. We wash
-                    vegetables thoroughly in clean water to remove dirt and residues. Cutting vegetables just before
-                    cooking helps retain their nutrients and natural color. Simple preparation methods ensure that the
-                    vegetables remain fresh and healthy in every dish.</p>
-            </div>
-        </div>
-
-        <div class="contentblog mb-5 wow fadeIn" data-wow-delay="0.1s">
-            <div class="subtitles mb-4">
-                <h2>How Fresh Vegetables Improve Overall Health</h2>
-            </div>
-            <div class="subpara">
-                <p class="lead">Including fresh vegetables in daily meals improves digestion, boosts immunity, and
-                    supports overall well-being. They help reduce the risk of lifestyle-related diseases and provide
-                    long-lasting energy. Home-made food prepared with fresh vegetables is light, nourishing, and
-                    suitable for all age groups.
-
-                    Fresh vegetables are the foundation of wholesome home-made food, making every meal nutritious,
-                    delicious, and made with care..</p>
-            </div>
-        </div>
-
-    </div>
-
-
-
-
-     <!-- Footer Start -->
+    <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
@@ -312,7 +311,6 @@
         </div>
     </div>
     <!-- Footer End -->
-
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i
