--- a/terms.html
+++ b/terms.html
@@ -39,7 +39,7 @@
             display: flex;
             align-items: center;
 
-            background-image: url("img/20613.webp");
+            background-image: url("img/terms-bg.webp");
             /* banner image */
             background-size: cover;
             /* 🔥 prevents breaking */
@@ -75,22 +75,22 @@
             /* highlight */
             color: #000;
         }
-
-        .subtitles {
-            border: none;
-            border-bottom: 2px solid red;
-            display: inline-block;
+        .terms-header,.list-header{
+           border:none;
+           border-bottom:2px solid red;
+           display:inline-block
         }
     </style>
 </head>
 
 <body>
-<!-- Spinner Start -->
+    <!-- Spinner Start -->
     <div id="spinner"
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border text-primary" role="status"></div>
     </div>
     <!-- Spinner End -->
+
 
     <!-- Navbar Start -->
     <div class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s">
@@ -127,7 +127,7 @@
                             <a href="testimonial.html" class="dropdown-item">Customer Reviews</a>
                         </div>
                     </div>
-                     <div class="nav-item dropdown">
+                    <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle fw-bold" data-bs-toggle="dropdown">Pricing</a>
                         <div class="dropdown-menu m-0">
                             <a href="breakfast.html" class="dropdown-item">Break Fast Foods</a>
@@ -145,10 +145,10 @@
                         </div>
                     </div>
                     <a href="product.html" class="nav-item nav-link fw-bold ">Products</a>
-                    <a href="blog.html" class="nav-item nav-link fw-bold active">Blog</a>
+                    <a href="blog.html" class="nav-item nav-link fw-bold ">Blog</a>
                     <a href="contact.html" class="nav-item nav-link fw-bold">Contact Us</a>
                 </div>
-              
+
             </div>
         </nav>
     </div>
@@ -157,90 +157,94 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header wow fadeIn" data-wow-delay="0.1s">
         <div class="container">
-            <h1 class="display-3 mb-3 animated slideInDown">Perfect Home-Made Meals for Busy Working Professionals</h1>
+            <h1 class="display-3 mb-3 animated slideInDown">Terms and Conditions</h1>
 
         </div>
     </div>
     <!-- Page Header End -->
 
-    <!-- blog image and contents -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-5 align-items-start">
-                <div class="col-lg-6 order-last order-lg-first wow fadeIn " data-wow-delay="0.5">
-                    <h2 class="mb-4 fw-bold ">Importance of Healthy Home-Made Lunch in Daily Life</h2>
-                    <p class="lead ">Fresh vegetables are essential in home-made food as they provide natural nutrients,
-                        freshness, and authentic taste. They are rich in vitamins, minerals, and fiber that support
-                        digestion and boost immunity. Using fresh vegetables helps avoid harmful preservatives and
-                        excess chemicals found in processed foods. They also enhance the color, aroma, and texture of
-                        dishes, making meals more enjoyable. Cooking with fresh, seasonal vegetables ensures better
-                        nutrition, improved health, and balanced daily meals, making home-made food healthier, safer,
-                        and more satisfying for the entire family.
-                    <p>
-
-                </div>
-                <div class="col-lg-6 order-first order-lg-last wow fadeIn " data-wow-delay="0.1s">
-                    <div class="nutrition-img ">
-                        <img class="img-fluid w-100 rounded-3" src="img/blog4.webp">
-                    </div>
-
-                </div>
-            </div>
+    <div class="container-xxl mt-5">
+        <div class="para mt-4">
+            <p class="lead text-secondary fw-bold">By accessing and using our home-made food delivery website, you agree to comply with and be legally bound by the following Terms and Conditions. These terms govern your use of our services, website, and food ordering platform.</p>
         </div>
+        <!-- list1 -->
+        <div class="terms-list">
+            <div class="list-header mt-4">
+               <h3>1. General Terms</h3>
+            </div>
+            <ol class="mt-4">
+                <li class="lead mb-3">These Terms and Conditions apply to all visitors, registered users, and customers using our home-made food delivery services.</li>
+                <li class="lead mb-3">Accessing or placing an order on the website confirms that you have read, understood, and agreed to these terms in full.</li>
+                <li class="lead mb-3">We reserve the right to modify, update, or replace any part of these Terms and Conditions without prior notice.</li>
+                <li class="lead mb-3">Continued use of the website after changes are posted will be considered acceptance of the revised terms.</li>
+                <li class="lead mb-3">Users who disagree with any section of these terms must immediately stop using the website and its services.</li> 
+            </ol>        
+        </div>
+
+         <!-- list2 -->
+        <div class="terms-list">
+            <div class="list-header mt-4">
+               <h3>2. User Eligibility</h3>
+            </div>
+            <ol class="mt-4">
+                <li class="lead mb-3">Users must be legally eligible to enter into a binding agreement under applicable laws.</li>
+                <li class="lead mb-3">By placing an order, users confirm that the information provided is accurate, current, and complete.</li>
+                <li class="lead mb-3">Users are responsible for safeguarding their login credentials and account information.</li>
+                <li class="lead mb-3">Any misuse of another person’s information or identity is strictly prohibited.</li>
+                <li class="lead mb-3">We reserve the right to restrict or terminate access for users who violate eligibility requirements.</li> 
+            </ol>        
+        </div>
+
+         <!-- list3 -->
+        <div class="terms-list ">
+            <div class="list-header mt-4 ">
+               <h3>3. Service Description</h3>
+            </div>
+            <ol class="mt-4">
+                <li class="lead mb-3">We specialize in delivering freshly prepared home-made food cooked by experienced home chefs using quality ingredients.</li>
+                <li class="lead mb-3">All meals are prepared in limited batches to maintain freshness, taste, and home-style quality.</li>
+                <li class="lead mb-3">Menu offerings may vary daily depending on ingredient availability, seasonal produce, or kitchen capacity.</li>
+                <li class="lead mb-3">Food descriptions, images, and nutritional details provided are for reference purposes only.</li>
+                <li class="lead mb-3">We reserve the right to modify menus, portion sizes, or meal combinations at any time without prior notice.</li> 
+            </ol>        
+        </div>
+
+         <!-- list4 -->
+        <div class="terms-list ">
+            <div class="list-header mt-4 ">
+               <h3>4. Changes To Terms</h3>
+            </div>
+            <ol class="mt-4">
+                <li class="lead mb-3">These Terms and Conditions may be updated periodically.</li>
+                <li class="lead mb-3">Updates become effective immediately upon publication on the website.</li>
+                <li class="lead mb-3">Users are responsible for reviewing terms regularly.</li>
+                <li class="lead mb-3">Continued use implies acceptance of revised terms.</li>
+                <li class="lead mb-3">No individual notification of updates is guaranteed.</li> 
+            </ol>        
+        </div>
+
+         <!-- list5 -->
+        <div class="terms-list mb-5">
+            <div class="list-header mt-4 ">
+               <h3>5. Acceptance of Terms</h3>
+            </div>
+            <ol class="mt-4">
+                <li class="lead mb-3">By accessing or using this website, you agree to be bound by these Terms and Conditions.</li>
+                <li class="lead mb-3">Continued use of our services constitutes acceptance of all terms stated herein</li>
+                <li class="lead mb-3">If you do not agree with any part of these terms, you must discontinue use immediately.</li>
+                <li class="lead mb-3">These terms apply to all users, visitors, and customers of the website.</li>
+                <li class="lead mb-3">We reserve the right to update these terms without prior notice.</li> 
+            </ol>        
+        </div>
+
+        <div class="term-footer mt-5">
+            <p class="lead text-secondary fw-bold">By using this website, you agree to our Terms & Conditions, Privacy Policy, Payment Policy, Delivery & Return Policy, and Disclaimer.</p>
+        </div>
+
+
+
     </div>
-    <div class="container-xxl py-3">
-        <div class="contentblog mb-5 wow fadeIn" data-wow-delay="0.1s">
-            <div class="subtitles mb-4">
-                <h2>Common Fresh Vegetables We Use Daily</h2>
-            </div>
-            <div class="subpara">
-                <p class="lead">In our daily cooking, we commonly use vegetables like tomatoes, onions, potatoes,
-                    carrots, beans, cabbage, cauliflower, brinjal, and drumstick. These vegetables are versatile and
-                    form the base of many home-style dishes such as curries, gravies, stir-fries, and rice-based meals.
-                    They add flavor, texture, and nutrition to regular meals.</p>
-            </div>
-        </div>
 
-        <div class="contentblog mb-5 wow fadeIn" data-wow-delay="0.1s">
-            <div class="subtitles mb-4">
-                <h2>Benefits of Using Seasonal Vegetables</h2>
-            </div>
-            <div class="subpara">
-                <p class="lead">Seasonal vegetables are always preferred in our home-made food. They are naturally
-                    grown, more nutritious, and fresher compared to off-season produce. Seasonal vegetables also taste
-                    better and are more affordable. Using them supports local farmers and helps maintain a sustainable
-                    and eco-friendly food habit.</p>
-            </div>
-        </div>
-
-        <div class="contentblog mb-5 wow fadeIn" data-wow-delay="0.1s">
-            <div class="subtitles mb-4">
-                <h2>Cleaning and Preparing Vegetables the Right Way</h2>
-            </div>
-            <div class="subpara">
-                <p class="lead">Proper cleaning and preparation of vegetables are essential for healthy cooking. We wash
-                    vegetables thoroughly in clean water to remove dirt and residues. Cutting vegetables just before
-                    cooking helps retain their nutrients and natural color. Simple preparation methods ensure that the
-                    vegetables remain fresh and healthy in every dish.</p>
-            </div>
-        </div>
-
-        <div class="contentblog mb-5 wow fadeIn" data-wow-delay="0.1s">
-            <div class="subtitles mb-4">
-                <h2>How Fresh Vegetables Improve Overall Health</h2>
-            </div>
-            <div class="subpara">
-                <p class="lead">Including fresh vegetables in daily meals improves digestion, boosts immunity, and
-                    supports overall well-being. They help reduce the risk of lifestyle-related diseases and provide
-                    long-lasting energy. Home-made food prepared with fresh vegetables is light, nourishing, and
-                    suitable for all age groups.
-
-                    Fresh vegetables are the foundation of wholesome home-made food, making every meal nutritious,
-                    delicious, and made with care..</p>
-            </div>
-        </div>
-
-    </div>
 
 
 
