added phone no on contact

--- a/contact.html
+++ b/contact.html
@@ -247,6 +247,12 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
+                                    <input type="tel" class="form-control" id="phoneno" placeholder="Your Mobile Number">
+                                    <label for="email">Your Mobile Number</label>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-floating">
                                     <input type="email" class="form-control" id="email" placeholder="Your Email">
                                     <label for="email">Your Email</label>
                                 </div>
@@ -265,7 +271,7 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <button class="btn btn-primary rounded-pill py-3 px-5" type="submit">Send
+                                <button class="btn btn-secondary rounded-pill py-3 px-5" type="submit">Send
                                     Message</button>
                             </div>
                         </div>
