--- a/lunch.html
+++ b/lunch.html
@@ -39,7 +39,7 @@
             display: flex;
             align-items: center;
 
-            background-image: url("img/pricing.webp");
+            background-image: url("img/bga.webp");
             /* banner image */
             background-size: cover;
             /* 🔥 prevents breaking */
